# metalmaps

./: .gitignore  MANIFEST.in  README.md  format.sh  format_hex.sh  pyproject.toml  setup.py
metalmaps/: __init__.py  colorcycle.py  colors.py  format_hex.sh  make_cmap.py
scripts/: NGC7496.hdf5  README.md  generate_plots.py  kelvin-helmholtz.hdf5  plot_lightness.py
