
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metalmaps"
description="Metal and rock inspired Matplotlib colormaps."
readme = "README.md"
authors= [
    { name = "Mladen Ivkovic", email="mladen.ivkovic@hotmail.com}"},
    { name = "Josh Borrow", email="" }
    ]
license = { file = "LICENSE.txt" }
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
],
keywords = [ "metal", "rock", "colormap", "matplotlib" ]
dependencies=[ "matplotlib" ]


[project.urls]
Homepage = "https://github.com/mivkov/metalmaps"

[tool.bumpver]
current_version = "0.2.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]

"metalmaps/__version__.py" = [
    "{version}"
]

